refactor: simplify filtering logic and use toList() in service implementations
Refactor the filtering logic in CitaServiceImpl, NotaServiceImpl, and TratamientoServiceImpl to use concise expressions. Replace collect(Collectors.toList()) with toList() for improved readability and maintainability.